refactor: reformat codebase and cleanup test utilities
- Standardize formatting across `FuzzyMatcherIntegrationTest`, `CompletionsIntegrationTest`, and `CodeUnitExtractor`.
- Replace redundant `IProject` anonymous implementation with `TestProject` utility.
- Update `Completions` to use `List.getFirst()` for readability.