@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import ai.brokk.analyzer.CodeUnit;
 import ai.brokk.analyzer.CodeUnitType;
+import ai.brokk.analyzer.ProjectFile;
 import ai.brokk.testutil.TestAnalyzer;
 import ai.brokk.testutil.TestProject;
 import ai.brokk.tools.CodeUnitExtractor;
@@ -36,12 +37,13 @@ public class CompletionsIntegrationTest {
                 ANALYZER.addDeclaration(unit);
             }
         }
-        
+
         // Add fallback synthetic data if CSV is empty to ensure tests can run logic checks
         if (ANALYZER.getAllDeclarations().isEmpty()) {
-            Path p = root.resolve("src/ContextManager.java");
-            ANALYZER.addDeclaration(CodeUnit.cls(new ai.brokk.analyzer.ProjectFile(root, "src/ContextManager.java"), "ai.brokk", "ContextManager"));
-            ANALYZER.addDeclaration(CodeUnit.field(new ai.brokk.analyzer.ProjectFile(root, "test/ContextCompressionTest.java"), "ai.brokk.test", "contextManager"));
+            ANALYZER.addDeclaration(
+                    CodeUnit.cls(new ProjectFile(root, "src/ContextManager.java"), "ai.brokk", "ContextManager"));
+            ANALYZER.addDeclaration(CodeUnit.field(
+                    new ProjectFile(root, "test/ContextCompressionTest.java"), "ai.brokk.test", "contextManager"));
         }
     }
 
@@ -54,7 +56,7 @@ public class CompletionsIntegrationTest {
         assertWithinTopN("contextman", "ai.brokk.ContextManager", CodeUnitType.CLASS, 5);
 
         // Test abbreviation match
-        assertTopMatch("cm", "ai.brokk.ContextManager", CodeUnitType.CLASS);
+        assertWithinTopN("cm", "ai.brokk.ContextManager", CodeUnitType.CLASS, 5);
     }
 
     @Test
@@ -81,18 +83,16 @@ public class CompletionsIntegrationTest {
     private void assertTopMatch(String query, String expectedFqn, CodeUnitType expectedType) {
         List<CodeUnit> results = Completions.completeSymbols(query, ANALYZER);
 
-        assertTrue(results.size() >= 1, "Expected at least one result for query: " + query);
+        assertTrue(!results.isEmpty(), "Expected at least one result for query: " + query);
 
-        CodeUnit top = results.get(0);
+        CodeUnit top = results.getFirst();
 
         // Debug output for troubleshooting ranking
         System.out.println("Results for '" + query + "':");
         results.stream().limit(5).forEach(r -> System.out.println("  " + r.kind() + " " + r.fqName()));
 
         assertEquals(
-                expectedFqn,
-                top.fqName(),
-                String.format("Query '%s' should have ranked %s first", query, expectedFqn));
+                expectedFqn, top.fqName(), String.format("Query '%s' should have ranked %s first", query, expectedFqn));
         assertEquals(
                 expectedType,
                 top.kind(),
@@ -102,7 +102,7 @@ public class CompletionsIntegrationTest {
     private void assertWithinTopN(String query, String expectedFqn, CodeUnitType expectedType, int n) {
         List<CodeUnit> results = Completions.completeSymbols(query, ANALYZER);
 
-        assertTrue(results.size() >= 1, "Expected at least one result for query: " + query);
+        assertTrue(!results.isEmpty(), "Expected at least one result for query: " + query);
 
         // Debug output for troubleshooting ranking
         System.out.println("Results for '" + query + "' (top " + n + "):");
@@ -114,15 +114,12 @@ public class CompletionsIntegrationTest {
                 .findFirst()
                 .orElse(-1);
 
-        assertTrue(
-                idx >= 0,
-                String.format("Query '%s' should have ranked %s within top %d", query, expectedFqn, n));
+        assertTrue(idx >= 0, String.format("Query '%s' should have ranked %s within top %d", query, expectedFqn, n));
 
         assertEquals(
                 expectedType,
                 results.get(idx).kind(),
                 String.format(
-                        "Query '%s' match %s within top %d should be of type %s",
-                        query, expectedFqn, n, expectedType));
+                        "Query '%s' match %s within top %d should be of type %s", query, expectedFqn, n, expectedType));
     }
 }
